--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <title>Contact - Travel</title>
+        <title>Liên Hệ - Dien Khanh Travel</title>
         <meta name="description" content="">
 <!-- 
 Travel Template
@@ -19,7 +19,7 @@ http://www.templatemo.com/tm-409-travel
         <link rel="stylesheet" href="css/font-awesome.css">
         <link rel="stylesheet" href="css/animate.css">
         <link rel="stylesheet" href="css/templatemo_misc.css">
-        <link rel="stylesheet" href="css/templatemo_style.css">
+        <link rel="stylesheet" href="css/templatemo_style.css?2">
 
         <script src="js/vendor/modernizr-2.6.1-respond-1.1.0.min.js"></script>
     </head>
@@ -43,10 +43,10 @@ http://www.templatemo.com/tm-409-travel
                             <div class="main-menu">
                                 <ul class="visible-lg visible-md">
                                     <li><a href="index.html">Home</a></li>
-                                    <li><a href="services.html">Services</a></li>
-                                    <li><a href="events.html">Events</a></li>
-                                	<li><a href="about.html">About Us</a></li>
-                                    <li class="active"><a href="contact.html">Contact</a></li>
+                                    <li><a href="services.html">Dịch Vụ</a></li>
+                                    <li><a href="events.html">Sự Kiện</a></li>
+                                    <li><a href="about.html">Giới Thiệu</a></li>
+                                    <li class="active"><a href="contact.html">Liên Hệ</a></li>
                                 </ul>
                                 <a href="#" class="toggle-menu visible-sm visible-xs">
                                     <i class="fa fa-bars"></i>
@@ -60,10 +60,10 @@ http://www.templatemo.com/tm-409-travel
                         <div class="menu-responsive">
                             <ul>
                                 <li><a href="index.html">Home</a></li>
-                                <li><a href="services.html">Services</a></li>
-                                <li><a href="events.html">Events</a></li>
-                                <li><a href="about.html">About Us</a></li>
-                                <li class="active"><a href="contact.html">Contact</a></li>
+                                <li><a href="services.html">Dịch Vụ</a></li>
+                                <li><a href="events.html">Sự Kiện</a></li>
+                                <li><a href="about.html">Giới Thiệu</a></li>
+                                <li class="active"><a href="contact.html">Liên Hệ</a></li>
                             </ul>
                         </div> <!-- /.menu-responsive -->
                     </div> <!-- /.col-md-12 -->
@@ -78,14 +78,14 @@ http://www.templatemo.com/tm-409-travel
             <div class="container">
                 <div class="row">
                     <div class="col-md-7 col-sm-6 map-wrapper">
-                        <h3 class="widget-title">Our Location</h3>
+                        <h3 class="widget-title">Địa chỉ phòng vé Diên Khánh</h3>
                         <div class="map-holder"></div>
                         <div class="contact-infos">
                             <ul>
-                                <li>987 Nay Yar Street, Analog Estate</li>
-                                <li>Yangon 10440, Myanmar</li>
-                                <li>Tel: 090-090-0880</li>
-                                <li>Email: <a href="mailto:info@company.com">info@company.com</a></li>
+                                <li>Km8, đường 23/10, Diên An</li>
+                                <li>Diên Khánh, Khánh Hoà</li>
+                                <li>Tel: 0905298448 - 0339001817</li>
+                                <li>Email: <a href="mailto:dailyvedienkhanh@gmail.com">dailyvedienkhanh@gmail.com</a></li>
                             </ul>
                         </div>
                     </div>
@@ -167,7 +167,7 @@ http://www.templatemo.com/tm-409-travel
                     </div> <!-- /.col-md-4 -->
                     <div class="col-md-4 col-sm-4">
                         <div class="copyright">
-                            <span>Copyright &copy; 2014 <a href="#">Company Name</a></span>
+                            <span>Copyright &copy; 2024 <a href="#">Dien Khanh Travel</a></span>
                         </div>
                     </div> <!-- /.col-md-4 -->
                     <div class="col-md-4 col-sm-4">
