--- a/events.html
+++ b/events.html
@@ -35,7 +35,7 @@ http://www.templatemo.com/tm-409-travel
                         <div class="col-md-4 col-sm-6 col-xs-10">
                             <div class="logo">
                                 <a href="#">
-                                    <img src="images/logo.png" alt="travel html5 template" title="travel html5 template">
+                                    <img src="images/logo.png" alt="Dien Khanh Travel" title="Dien Khanh Travel">
                                 </a>
                             </div> <!-- /.logo -->
                         </div> <!-- /.col-md-4 -->
