--- a/contact.html
+++ b/contact.html
@@ -77,10 +77,12 @@ http://www.templatemo.com/tm-409-travel
         <div class="contact-page">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-7 col-sm-6 map-wrapper">
-                        <h3 class="widget-title">Địa chỉ phòng vé Diên Khánh</h3>
-                        <div class="map-holder"></div>
-                        <div class="contact-infos">
+                    <div class="col-md-8 col-sm-6 map-wrapper">
+                        <h3 class="widget-title">Địa chỉ đại lý vé Diên Khánh</h3>
+                        <div>
+                            <img src="images/dia_chi.png" style="width: 95%;">
+                        </div>
+                        <div class="contact-infos" style="display: none;">
                             <ul>
                                 <li>Km8, đường 23/10, Diên An</li>
                                 <li>Diên Khánh, Khánh Hoà</li>
@@ -89,10 +91,16 @@ http://www.templatemo.com/tm-409-travel
                             </ul>
                         </div>
                     </div>
-                    <div class="col-md-5 col-sm-6">
-                        <h3 class="widget-title">Contact Us</h3>
-                        <div class="contact-form">
-                            <form name="contactform" id="contactform" action="#" method="post">
+                    <div class="col-md-4 col-sm-6">
+                        <h3 class="widget-title">Liên Hệ</h3>
+                        <div>
+                            <p>Km8, đường 23/10, Diên An</p>
+                            <p>Diên Khánh, Khánh Hoà</p>
+                            <p>Tel: 0905298448 - 0339001817</p>
+                            <p>Email: <a href="mailto:dailyvedienkhanh@gmail.com">dailyvedienkhanh@gmail.com</a></p>
+                        </div>
+                        <div class="contact-form" style="display: none;">
+                            <form name="contactform" id="contactform" action="#" method="post" >
                                 <p>
                                     <input name="name" type="text" id="name" placeholder="Your Name">
                                 </p>
@@ -190,11 +198,11 @@ http://www.templatemo.com/tm-409-travel
         <script src="js/main.js"></script>
 
         <!-- Google Map -->
-        <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
-        <script src="js/vendor/jquery.gmap3.min.js"></script>
+        <!-- <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+        <script src="js/vendor/jquery.gmap3.min.js"></script> -->
         
         <!-- Google Map Init-->
-        <script type="text/javascript">
+        <!-- <script type="text/javascript">
             jQuery(function($){
                 $('.first-map, .map-holder').gmap3({
                     marker:{
@@ -209,7 +217,7 @@ http://www.templatemo.com/tm-409-travel
                     }
                 });
             });
-        </script>
+        </script> -->
         <!-- templatemo 409 travel -->
     </body>
 </html>
