--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <title>Giới Thiệu - Dien Khanh Travel</title>
+        <title>Dien Khanh Travel - Vé máy bay, vé tàu, vé xe, tour, khách sạn</title>
         <meta name="description" content="">
 <!-- 
 Travel Template
@@ -19,7 +19,7 @@ http://www.templatemo.com/tm-409-travel
         <link rel="stylesheet" href="css/font-awesome.css">
         <link rel="stylesheet" href="css/animate.css">
         <link rel="stylesheet" href="css/templatemo_misc.css">
-        <link rel="stylesheet" href="css/templatemo_style.css?2">
+        <link rel="stylesheet" href="css/templatemo_style.css?3">
 
         <script src="js/vendor/modernizr-2.6.1-respond-1.1.0.min.js"></script>
     </head>
@@ -42,9 +42,9 @@ http://www.templatemo.com/tm-409-travel
                         <div class="col-md-8 col-sm-6 col-xs-2">
                             <div class="main-menu">
                                 <ul class="visible-lg visible-md">
-                                    <li><a href="index.html">Home</a></li>
-                                    <li><a href="services.html">Dịch Vụ</a></li>
-                                    <li><a href="events.html">Sự Kiện</a></li>
+                                    <li><a href="index.html">Vé máy bay</a></li>
+                                    <li><a href="tours.html">Tours</a></li>
+                                    <li><a href="services.html">Dịch vụ khác</a></li>
                                     <li class="active"><a href="about.html">Giới Thiệu</a></li>
                                     <li><a href="contact.html">Liên Hệ</a></li>
                                 </ul>
@@ -59,9 +59,9 @@ http://www.templatemo.com/tm-409-travel
                     <div class="col-md-12 visible-sm visible-xs">
                         <div class="menu-responsive">
                             <ul>
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="services.html">Dịch Vụ</a></li>
-                                <li><a href="events.html">Sự Kiện</a></li>
+                                <li><a href="index.html">Vé máy bay</a></li>
+                                <li><a href="tours.html">Tours</a></li>
+                                <li><a href="services.html">Dịch vụ khác</a></li>
                                 <li class="active"><a href="about.html">Giới Thiệu</a></li>
                                 <li><a href="contact.html">Liên Hệ</a></li>
                             </ul>
@@ -81,25 +81,34 @@ http://www.templatemo.com/tm-409-travel
                 
                 	<div class="col-md-6"><!-- first column -->
                         <div class="widget-item">
-                            <h3 class="widget-title">Our Company</h3>
+                            <h3 class="widget-title">Về Công Ty</h3>
                             <div class="sample-thumb">
                                 <img src="images/about_1.jpg" alt="about us" title="about us">
                             </div> <!-- /.sample-thumb -->
-                            <h4 class="consult-title">Vestibulum sodales tempus lacus</h4>
-                            <p>Duis mattis neque vel rutrum finibus. Mauris vel tincidunt purus. Aenean laoreet ornare purus. Nunc condimentum augue sed massa iaculis, vel blandit sapien consectetur. Curabitur eu aliquam erat. Etiam sollicitudin est eu turpis dapibus aliquet. Ut vitae lacus vel nulla iaculis interdum.<br><br>
-							Suspendisse convallis congue tellus, nec ultricies sem molestie ac. Nunc lobortis elit orci, vitae suscipit urna dictum id. Nullam at elementum magna. Vivamus sit amet ipsum tortor. Nullam molestie eros quis risus pellentesque, eget pellentesque mauris placerat.</p>
+                            <h4 class="consult-title">ĐẠI LÝ VÉ DIÊN KHÁNH</h4>
+                            <p>Hiện nay, hầu hết mọi người khi đặt vé máy bay, tàu, xe hay các dịch vụ du lịch khác đều băn khoăn về địa điểm đặt vé hay các trang mạng uy tín bởi không phải địa điểm nào hay trang mạng nào cũng đáng tin cậy.<br><br></p>
+                            <p>Thì nay, trên địa bàn huyện Diên Khánh có 1 đại lý đáng tin cậy và uy tín với đội ngũ quản lý và nhân viên có hơn 10 năm kinh nghiệm trong nghề.<br><br></p>
+                            <p>Đại Lý Vé Diên Khánh với phương châm uy tín và chuyên nghiệp hứa hẹn là địa điểm lựa chọn đáng tin cậy cho quý khách hàng gần xa. Mang đến cho quý khách hàng những lựa chọn tối ưu nhất và phù hợp với nhu cầu của quý khách nhất.<br><br></p>
+                            <p>Rất hân hạnh được phục vụ quý khách.<br><br></p>
+                            <p>ĐẠI LÝ VÉ DIÊN KHÁNH<br></p>
+                            <ul>
+                                <li>-   Chuyên vé máy bay quốc nội và quốc tế</li>
+                                <li>-   Vé Tàu hỏa, vé xe khách, xe đưa đón sân bay</li>
+                                <li>-   Bảo hiểm du lịch toàn cầu</li>
+                                <li>-   Dịch vụ du lịch, tour, khách sạn...</li>
+                            </ul>
                         </div> <!-- /.widget-item -->
                     </div> <!-- /.col-md-4 -->
 
                     <div class="col-md-6"><!-- second column -->
                         <div class="widget-item">
-                            <h3 class="widget-title">Our Team</h3>
+                            <h3 class="widget-title">Đội Ngũ</h3>
                             <div class="sample-thumb">
                                 <img src="images/about_2.jpg" alt="company" title="company">
                             </div> <!-- /.sample-thumb -->
-                            <h4 class="consult-title">Cum sociis natoque penatibus et magnis</h4>
-                            <p>Curabitur eu aliquam erat. Etiam sollicitudin est eu turpis dapibus aliquet. Ut vitae lacus vel nulla iaculis interdum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br><br>
-							In hac habitasse platea dictumst. Nulla mollis nisl id ipsum faucibus lacinia. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam sit amet ultricies mauris. Nulla fermentum nisl felis, id blandit nunc vehicula vel.</p>
+                            <h4 class="consult-title">Bookers</h4>
+                            <p style="font-size: 20px; color: red;">Ms. Thảo: 0905 298 448 - 0941 964 745<br><br></p>
+                            <p style="font-size: 20px; color: red;">Ms. Ly: 0339 001 817<br><br></p>
                         </div> <!-- /.widget-item -->
                     </div> <!-- /.col-md-4 -->
                     
