--- a/events.html
+++ b/events.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <title>Sự Kiện - Dien Khanh Travel</title>
+        <title>Dien Khanh Travel - Vé máy bay, vé tàu, vé xe, tour, khách sạn</title>
         <meta name="description" content="">
 <!-- 
 Travel Template
@@ -19,7 +19,7 @@ http://www.templatemo.com/tm-409-travel
         <link rel="stylesheet" href="css/font-awesome.css">
         <link rel="stylesheet" href="css/animate.css">
         <link rel="stylesheet" href="css/templatemo_misc.css">
-        <link rel="stylesheet" href="css/templatemo_style.css?2">
+        <link rel="stylesheet" href="css/templatemo_style.css?3">
 
         <script src="js/vendor/modernizr-2.6.1-respond-1.1.0.min.js"></script>
     </head>
@@ -42,9 +42,9 @@ http://www.templatemo.com/tm-409-travel
                         <div class="col-md-8 col-sm-6 col-xs-2">
                             <div class="main-menu">
                                 <ul class="visible-lg visible-md">
-                                    <li><a href="index.html">Home</a></li>
-                                    <li><a href="services.html">Dịch Vụ</a></li>
-                                    <li class="active"><a href="events.html">Sự Kiện</a></li>
+                                    <li><a href="index.html">Vé máy bay</a></li>
+                                    <li><a href="tours.html">Tours</a></li>
+                                    <li class="active"><a href="services.html">Dịch vụ khác</a></li>
                                     <li><a href="about.html">Giới Thiệu</a></li>
                                     <li><a href="contact.html">Liên Hệ</a></li>
                                 </ul>
@@ -59,9 +59,9 @@ http://www.templatemo.com/tm-409-travel
                     <div class="col-md-12 visible-sm visible-xs">
                         <div class="menu-responsive">
                             <ul>
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="services.html">Dịch Vụ</a></li>
-                                <li class="active"><a href="events.html">Sự Kiện</a></li>
+                                <li><a href="index.html">Vé máy bay</a></li>
+                                <li><a href="tours.html">Tours</a></li>
+                                <li class="active"><a href="services.html">Dịch vụ khác</a></li>
                                 <li><a href="about.html">Giới Thiệu</a></li>
                                 <li><a href="contact.html">Liên Hệ</a></li>
                             </ul>
