--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <title>Liên Hệ - Dien Khanh Travel</title>
+        <title>Dien Khanh Travel - Vé máy bay, vé tàu, vé xe, tour, khách sạn</title>
         <meta name="description" content="">
 <!--
 Travel Template
 http://www.templatemo.com/tm-409-travel
 -->
         <meta name="viewport" content="width=device-width">
-    <meta name="author" content="templatemo">
+        <meta name="author" content="templatemo">
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,800,700,600,300' rel='stylesheet' type='text/css'>
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/font-awesome.css">
         <link rel="stylesheet" href="css/animate.css">
         <link rel="stylesheet" href="css/templatemo_misc.css">
-        <link rel="stylesheet" href="css/templatemo_style.css?2">
+        <link rel="stylesheet" href="css/templatemo_style.css?3">
 
         <script src="js/vendor/modernizr-2.6.1-respond-1.1.0.min.js"></script>
     </head>
@@ -42,9 +42,9 @@ http://www.templatemo.com/tm-409-travel
                         <div class="col-md-8 col-sm-6 col-xs-2">
                             <div class="main-menu">
                                 <ul class="visible-lg visible-md">
-                                    <li class="active"><a href="index.html">Home</a></li>
-                                    <li><a href="services.html">Dịch Vụ</a></li>
-                                    <li><a href="events.html">Sự Kiện</a></li>
+                                    <li class="active"><a href="index.html">Vé máy bay</a></li>
+                                    <li><a href="tours.html">Tours</a></li>
+                                    <li><a href="services.html">Dịch vụ khác</a></li>
                                     <li><a href="about.html">Giới Thiệu</a></li>
                                     <li><a href="contact.html">Liên Hệ</a></li>
                                 </ul>
@@ -59,11 +59,11 @@ http://www.templatemo.com/tm-409-travel
                     <div class="col-md-12 visible-sm visible-xs">
                         <div class="menu-responsive">
                             <ul>
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="services.html">Dịch Vụ</a></li>
-                                <li><a href="events.html">Sự Kiện</a></li>
+                                <li class="active"><a href="index.html">Vé máy bay</a></li>
+                                <li><a href="tours.html">Tours</a></li>
+                                <li><a href="services.html">Dịch vụ khác</a></li>
                                 <li><a href="about.html">Giới Thiệu</a></li>
-                                <li class="active"><a href="contact.html">Liên Hệ</a></li>
+                                <li><a href="contact.html">Liên Hệ</a></li>
                             </ul>
                         </div> <!-- /.menu-responsive -->
                     </div> <!-- /.col-md-12 -->
@@ -71,55 +71,154 @@ http://www.templatemo.com/tm-409-travel
             </div> <!-- /.container -->
         </div> <!-- /.site-header -->
 
-        <div class="page-top" id="templatemo_contact">
+        <div class="page-top" id="templatemo_services">
         </div> <!-- /.page-header -->
 
-        <div class="contact-page">
+        <div class="middle-content">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8 col-sm-6 map-wrapper">
-                        <h3 class="widget-title">Địa chỉ đại lý vé Diên Khánh</h3>
-                        <div>
-                            <img src="images/dia_chi.png" style="width: 95%;">
-                        </div>
-                        <div class="contact-infos" style="display: none;">
-                            <ul>
-                                <li>Km8, đường 23/10, Diên An</li>
-                                <li>Diên Khánh, Khánh Hoà</li>
-                                <li>Tel: 0905298448 - 0339001817</li>
-                                <li>Email: <a href="mailto:dailyvedienkhanh@gmail.com">dailyvedienkhanh@gmail.com</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-sm-6">
-                        <h3 class="widget-title">Liên Hệ</h3>
-                        <div>
-                            <p>Km8, đường 23/10, Diên An</p>
-                            <p>Diên Khánh, Khánh Hoà</p>
-                            <p>Tel: 0905298448 - 0339001817</p>
-                            <p>Email: <a href="mailto:dailyvedienkhanh@gmail.com">dailyvedienkhanh@gmail.com</a></p>
-                        </div>
-                        <div class="contact-form" style="display: none;">
-                            <form name="contactform" id="contactform" action="#" method="post" >
-                                <p>
-                                    <input name="name" type="text" id="name" placeholder="Your Name">
-                                </p>
-                                <p>
-                                    <input name="email" type="text" id="email" placeholder="Your Email">
-                                </p>
-                                <p>
-                                    <input name="subject" type="text" id="subject" placeholder="Subject">
-                                </p>
-                                <p>
-                                    <textarea name="message" id="message" placeholder="Message"></textarea>
-                                </p>
-                                <input type="submit" class="mainBtn" id="submit" value="Send Message">
-                            </form>
-                        </div> <!-- /.contact-form -->
-                    </div>
-                </div>
-            </div>
-        </div>
+
+                    <div class="col-md-8">
+                        <div class="widget-item">
+                            <h3 class="widget-title">Tin tức - Sự kiện</h3>
+
+                            <div class="row news">
+                                <div class="col-md-12"><h4 class="news-title">Vietnam Airlines tiết kiệm hơn khi bay chuyến sáng sớm/tối muộn</h4></div>
+                                <div class="col-md-6">
+                                    <div class="sample-thumb">
+                                        <img src="images/news/bay-dem-1.jpg" alt="">
+                                    </div> <!-- /.sample-thumb -->
+                                </div>
+                                <div class="col-md-6">
+                                    <p>Với bí quyết mua vé máy bay trong khung giờ linh hoạt, các chặng bay nội địa áp dụng có mức giá hấp dẫn.<br>Chỉ từ 1.098.000 VND/chiều cho hạng Phổ thông và từ 1.905.000 VND/chiều cho hạng Thương gia (mức giá chưa bao phí dịch vụ đại lý).<br>Tiết kiệm hơn lên đến 30% giá vé so với mức giá tại thời điểm trưa hoặc chiều.</p>
+                                </div>
+                            </div>
+
+                            <div class="row news">
+                                <div class="col-md-12"><h4 class="news-title">Bay khắp thế giới với Vietjet Air</h4></div>
+                                <div class="col-md-6">
+                                    <div class="sample-thumb">
+                                        <img src="images/news/bay-khap-the-gioi-vietjet.jpg" alt="">
+                                    </div> <!-- /.sample-thumb -->
+                                </div>
+                                <div class="col-md-6">
+                                    <p>Vietjet Air nay khai thác  với hơn 168 đường bay quốc tế, nhằm phục vụ tối đa như cầu đi lại của quý khách một cách đa dạng và phong phú nhất.</p>
+                                </div>
+                            </div>
+
+                            <div class="row news">
+                                <div class="col-md-12">
+                                    <h4 class="news-title">Bay thẳng cùng AIR ASIA</h4>
+                                </div>
+                                <div class="col-md-6">
+                                    <h4 class="news-title">Nha Trang - Kuala Lumpur</h4>
+                                    <div class="sample-thumb">
+                                        <img src="images/news/news-1.jpg" alt="">
+                                    </div> <!-- /.sample-thumb -->
+                                </div>
+                                <div class="col-md-6">
+                                    <h4 class="news-title">Nha Trang - Bangkok</h4>
+                                    <div class="sample-thumb">
+                                        <img src="images/news/news-2.jpg" alt="">
+                                    </div> <!-- /.sample-thumb -->
+                                </div>
+                            </div>
+                        </div> <!-- /.widget-item -->
+                    </div> <!-- /.col-md-4 -->
+                    <div class="col-md-4">
+                        <div class="widget-item">
+                            <h3 class="widget-title">Liên hệ đặt vé</h3>
+                            <div class="service-item">
+                                <div class="service-icon">
+                                    <i class="fa fa-plane"></i>
+                                </div> <!-- /.service-icon -->
+                                <div class="service-content">
+                                    <h4>MS. Thảo</h4>
+                                    <p>Tel: 0905 298 448 - 0941 964 745</p>
+                                    <p>Zalo: <a href="https://zalo.me/0941964745" target="_blank">0941 964 745</a></p>
+                                    <p>Email: <a href="mailto:dailyvedienkhanh@gmail.com">dailyvedienkhanh@gmail.com</a></p>
+                                </div> <!-- /.service-content -->
+                            </div> <!-- /.service-item -->
+                            <div class="service-item">
+                                <div class="service-icon">
+                                    <i class="fa fa-plane"></i>
+                                </div> <!-- /.service-icon -->
+                                <div class="service-content">
+                                    <h4>MS. Ly</h4>
+                                    <p>Tel: 0339 001 817</p>
+                                    <p>Zalo: <a href="https://zalo.me/0339001817" target="_blank">0339 001 817</a></p>
+                                </div> <!-- /.service-content -->
+                            </div> <!-- /.service-item -->
+                        </div> <!-- /.widget-item -->
+                    </div> <!-- /.col-md-4 -->
+                </div> <!-- /.row -->
+            </div> <!-- /.container -->
+        </div> <!-- /.middle-content -->
+
+
+
+        <div class="go-act hidden">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="first-map"></div>
+                    </div> <!-- /.col-md-4 -->
+                    <div class="col-md-8">
+                        <div class="act-btn">
+                            <div class="inner">
+                                <div class="price">
+                                    $5,600
+                                </div> <!-- /.price -->
+                                <div class="title">
+                                    <h2>Europa Tour</h2>
+                                    <span>Belgium, Austria, Poland, France, England</span>
+                                </div>
+                            </div> <!-- /.inner -->
+                            <a href="#" class="link">
+                                <i class="fa fa-angle-right"></i>
+                            </a>
+                        </div> <!-- /.act-btn -->
+                    </div> <!-- /.col-md-8 -->
+                </div> <!-- /.row -->
+            </div> <!-- /.container -->
+        </div> <!-- /.go-act -->
+
+
+
+        <div class="ticket-list" hidden>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3 col-sm-6">
+                        <div class="ticket-item">
+                            <h4><a href="#">Airlines</a></h4>
+                            <p>Travel HTML Template is provided by <span class="blue">template</span><span class="green">mo</span>. Download, modify and use this layout for your travel or tour websites.<br><br> Aliquam justo lectus, fermentum vitae libero sollicitudin, tincidunt accumsan magna.Vestibulum congue lorem odio, at sodales nisi luctus quis.</p>
+                            <a href="#" class="ticket-btn">Buy a ticket</a>
+                        </div> <!-- /.ticket-item -->
+                    </div> <!-- /.col-md-3 -->
+                    <div class="col-md-3 col-sm-6">
+                        <div class="ticket-item">
+                            <h4><a href="#">Best Cities</a></h4>
+                            <p>Donec sit amet metus in quam consectetur posuere. Mauris scelerisque tortor sit amet porta lacinia. Suspendisse sit amet nisi volutpat, placerat.<br><br>Vestibulum congue lorem odio, at sodales nisi luctus quis. Suspendisse suscipit ligula libero, id consectetur magna.</p>
+                            <a href="#" class="ticket-btn">Explore Cities</a>
+                        </div> <!-- /.ticket-item -->
+                    </div> <!-- /.col-md-3 -->
+                    <div class="col-md-3 col-sm-6">
+                        <div class="ticket-item">
+                            <h4><a href="#">Travel Guides</a></h4>
+                            <p>Suspendisse id felis ac orci dignissim efficitur non eget elit. Maecenas lacinia sodales aliquet. Maecenas consequat orci et neque convallis volutpat.<br><br> Integer viverra erat nisi, sed faucibus velit ultricies facilisis. Nam eu felis ac ex fermentum scelerisque.</p>
+                            <a href="#" class="ticket-btn">Details</a>
+                        </div> <!-- /.ticket-item -->
+                    </div> <!-- /.col-md-3 -->
+                    <div class="col-md-3 col-sm-6">
+                        <div class="ticket-item">
+                            <h4><a href="#">Special Events</a></h4>
+                            <p>Aliquam ultricies eros commodo, scelerisque lorem sit amet, mollis odio. Ut malesuada sapien sit amet risus lobortis bibendum. Pellentesque eu ante augue.<br><br>Mauris vel tincidunt purus. Aenean laoreet ornare purus. Nunc condimentum augue sed massa iaculis, vel blandit.</p>
+                            <a href="#" class="ticket-btn">Check a calendar</a>
+                        </div> <!-- /.ticket-item -->
+                    </div> <!-- /.col-md-3 -->
+                </div> <!-- /.row -->
+            </div> <!-- /.container -->
+        </div> <!-- /.ticket-list -->
 
 
 
@@ -196,28 +295,5 @@ http://www.templatemo.com/tm-409-travel
         <script src="js/bootstrap.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
-
-        <!-- Google Map -->
-        <!-- <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
-        <script src="js/vendor/jquery.gmap3.min.js"></script> -->
-
-        <!-- Google Map Init-->
-        <!-- <script type="text/javascript">
-            jQuery(function($){
-                $('.first-map, .map-holder').gmap3({
-                    marker:{
-                        address: '16.8496189,96.1288854'
-                    },
-                        map:{
-                        options:{
-                        zoom: 16,
-                        scrollwheel: false,
-                        streetViewControl : true
-                        }
-                    }
-                });
-            });
-        </script> -->
-        <!-- templatemo 409 travel -->
     </body>
 </html>
