--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <title>Liên Hệ - Dien Khanh Travel</title>
+        <title>Dien Khanh Travel - Vé máy bay, vé tàu, vé xe, tour, khách sạn</title>
         <meta name="description" content="">
 <!-- 
 Travel Template
@@ -19,7 +19,7 @@ http://www.templatemo.com/tm-409-travel
         <link rel="stylesheet" href="css/font-awesome.css">
         <link rel="stylesheet" href="css/animate.css">
         <link rel="stylesheet" href="css/templatemo_misc.css">
-        <link rel="stylesheet" href="css/templatemo_style.css?2">
+        <link rel="stylesheet" href="css/templatemo_style.css?3">
 
         <script src="js/vendor/modernizr-2.6.1-respond-1.1.0.min.js"></script>
     </head>
@@ -42,9 +42,9 @@ http://www.templatemo.com/tm-409-travel
                         <div class="col-md-8 col-sm-6 col-xs-2">
                             <div class="main-menu">
                                 <ul class="visible-lg visible-md">
-                                    <li><a href="index.html">Home</a></li>
-                                    <li><a href="services.html">Dịch Vụ</a></li>
-                                    <li><a href="events.html">Sự Kiện</a></li>
+                                    <li><a href="index.html">Vé máy bay</a></li>
+                                    <li><a href="tours.html">Tours</a></li>
+                                    <li><a href="services.html">Dịch vụ khác</a></li>
                                     <li><a href="about.html">Giới Thiệu</a></li>
                                     <li class="active"><a href="contact.html">Liên Hệ</a></li>
                                 </ul>
@@ -59,9 +59,9 @@ http://www.templatemo.com/tm-409-travel
                     <div class="col-md-12 visible-sm visible-xs">
                         <div class="menu-responsive">
                             <ul>
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="services.html">Dịch Vụ</a></li>
-                                <li><a href="events.html">Sự Kiện</a></li>
+                                <li><a href="index.html">Vé máy bay</a></li>
+                                <li><a href="tours.html">Tours</a></li>
+                                <li><a href="services.html">Dịch vụ khác</a></li>
                                 <li><a href="about.html">Giới Thiệu</a></li>
                                 <li class="active"><a href="contact.html">Liên Hệ</a></li>
                             </ul>
@@ -196,28 +196,5 @@ http://www.templatemo.com/tm-409-travel
         <script src="js/bootstrap.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
-
-        <!-- Google Map -->
-        <!-- <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
-        <script src="js/vendor/jquery.gmap3.min.js"></script> -->
-        
-        <!-- Google Map Init-->
-        <!-- <script type="text/javascript">
-            jQuery(function($){
-                $('.first-map, .map-holder').gmap3({
-                    marker:{
-                        address: '16.8496189,96.1288854' 
-                    },
-                        map:{
-                        options:{
-                        zoom: 16,
-                        scrollwheel: false,
-                        streetViewControl : true
-                        }
-                    }
-                });
-            });
-        </script> -->
-        <!-- templatemo 409 travel -->
     </body>
 </html>
