--- a/about.html
+++ b/about.html
@@ -32,14 +32,14 @@ http://www.templatemo.com/tm-409-travel
             <div class="container">
                 <div class="main-header">
                     <div class="row">
-                        <div class="col-md-4 col-sm-6 col-xs-10">
+                        <div class="col-md-5 col-sm-10 col-xs-10">
                             <div class="logo">
                                 <a href="#">
-                                    <img src="images/logo.png" alt="Dien Khanh Travel" title="Dien Khanh Travel">
+                                    <img src="images/logo3.jpg" alt="Dien Khanh Travel" title="Dien Khanh Travel">
                                 </a>
                             </div> <!-- /.logo -->
                         </div> <!-- /.col-md-4 -->
-                        <div class="col-md-8 col-sm-6 col-xs-2">
+                        <div class="col-md-7 col-sm-2 col-xs-2">
                             <div class="main-menu">
                                 <ul class="visible-lg visible-md">
                                     <li><a href="index.html">Vé máy bay</a></li>
